alfred: Fix the list email address in the README.
The address is wrong,  missing the hostname.

Signed-off-by: Andrew Lunn <andrew@lunn.ch>
Signed-off-by: Simon Wunderlich <simon@open-mesh.com>

--- a/README
+++ b/README
@@ -188,7 +188,7 @@ As alfred was developed to help on batman-adv, we share communication channels.
 Please send us comments, experiences, questions, anything :)
 
 IRC:            #batman   on   irc.freenode.org
-Mailing-list:   b.a.t.m.a.n@open-mesh.org (optional  subscription
+Mailing-list:   b.a.t.m.a.n@lists.open-mesh.org (optional  subscription
                 at https://lists.open-mesh.org/mm/listinfo/b.a.t.m.a.n)
 
 If you have test reports/patches/ideas, please read the wiki for further instruction
