--- a/README
+++ b/README
@@ -198,6 +198,6 @@ http://www.open-mesh.org/projects/open-mesh/wiki/Contribute
 
 You can also contact the Authors:
 
-Simon Wunderlich <siwu@hrz.tu-chmnitz.de>
+Simon Wunderlich <siwu@hrz.tu-chemnitz.de>
 Sven Eckelmann <sven@open-mesh.com>
 
