alfred: update email address for Simon Wunderlich
My university will stop email service for alumni in january 2014,
please use my new e-mail address instead.

Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/README
+++ b/README
@@ -198,6 +198,6 @@ http://www.open-mesh.org/projects/open-mesh/wiki/Contribute
 
 You can also contact the Authors:
 
-Simon Wunderlich <siwu@hrz.tu-chemnitz.de>
+Simon Wunderlich <sw@simonwunderlich.de>
 Sven Eckelmann <sven@open-mesh.com>
 
