--- a/man/alfred.8
+++ b/man/alfred.8
@@ -131,6 +131,6 @@ Retreive all data stored as id 65 from all connected alfred servers:
 .BR batadv-vis (8),
 .BR batctl (8)
 .SH AUTHOR
-alfred was written by Simon Wunderlich <siwu@hrz.tu-chemnitz.de> and Sven Eckelmann <sven@open-mesh.com>.
+alfred was written by Simon Wunderlich <sw@simonwunderlich.de> and Sven Eckelmann <sven@open-mesh.com>.
 .PP
-This manual page was written by Simon Wunderlich <siwu@hrz.tu-chemnitz.de> and Sven Eckelmann <sven@open-mesh.com>.
+This manual page was written by Simon Wunderlich <sw@simonwunderlich.de> and Sven Eckelmann <sven@open-mesh.com>.
