--- a/vis/man/batadv-vis.8
+++ b/vis/man/batadv-vis.8
@@ -111,6 +111,6 @@ To get a json vis output:
 .BR alfred (8),
 .BR batctl (8)
 .SH AUTHOR
-batadv\-vis was written by Simon Wunderlich <siwu@hrz.tu-chemnitz.de>.
+batadv\-vis was written by Simon Wunderlich <sw@simonwunderlich.de>.
 .PP
-This manual page was written by Simon Wunderlich <siwu@hrz.tu-chemnitz.de> and Sven Eckelmann <sven@open-mesh.com>.
+This manual page was written by Simon Wunderlich <sw@simonwunderlich.de> and Sven Eckelmann <sven@open-mesh.com>.
