--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,19 @@
+alfred 2013.4.0:
+
+ * add new json output format for vis
+ * add gps location information service for alfred
+ * allow network interface to vanish and return without restart
+ * allow to switch between master and slave operation without restart
+ * renamed vis to batadv-vis to avoid collisions with other vis binaries
+ * add manpages
+ * various code cleanups
+ * bugs squashed:
+
+   * handle failing write() in unix sockets
+   * Fix crash when vis opened empty file
+
+ -- Sun, 13 Oct 2013 22:55:43 +0200
+
 alfred 2013.3.0:
 
  * initial release of alfred after beta (synced release cycle with
