--- a/man/alfred.8
+++ b/man/alfred.8
@@ -50,6 +50,9 @@ Print the version
 .TP
 \fB\-h\fP, \fB\-\-help\fP
 Display a brief help message.
+.TP
+\fB\-u\fP, \fB\-\-unix-path\fP \fIpath\fP
+path to unix socket used for client-server communication.
 .
 .SH CLIENT OPTIONS
 .TP
