--- a/vis/man/batadv-vis.8
+++ b/vis/man/batadv-vis.8
@@ -42,6 +42,9 @@ Print the version
 \fB\-h\fP, \fB\-\-help\fP
 Display a brief help message.
 .TP
+\fB\-u\fP, \fB\-\-unix-path\fP \fIpath\fP
+path to unix socket used for alfred server communication.
+.TP
 \fB\-i\fP, \fB\-\-interface\fP \fIiface\fP
 Specify the batman-adv interface configured on the system (default: bat0)
 .TP
