alfred: support for changing interfaces
This patch adds support for changing the interface alfreds listens to on
the fly without restarting alfred.

Signed-off-by: Simon Wunderlich <simon@open-mesh.com>

---
Changes to PATCH:
 * fix const warning

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -80,6 +80,9 @@ to 0 ('\fB\-V\fP 0').
 \fBslave\fP
     Switch daemon to mode slave
 .fi
+.TP
+\fB\-I\fP, \fB\-\-change\-interface\fP \fIinterface\fP
+Change the alfred server to use the new \fBinterface\fP
 .
 .SH SERVER OPTIONS
 .TP
