alfred: Add support for multiple interfaces per master
It may required in some situations that all alfred master servers are
potentially connected to the same backbone network but cannot see each other
through the mesh. The data may still be exchanged and thus a master instance
must listen for requests on the mesh and synchronize data over the backbone
network.

The limitation that data can only be synchronized over one master hop and not
more still holds true. Also alfred servers in slave mode are not allowed to
operate on multiple interfaces. This is especially important when switching
from master to slave mode because this can fail now when multiple interfaces
are configured.

Signed-off-by: Sven Eckelmann <sven@open-mesh.com>
Signed-off-by: Simon Wunderlich <simon@open-mesh.com>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -82,12 +82,12 @@ to 0 ('\fB\-V\fP 0').
 .fi
 .TP
 \fB\-I\fP, \fB\-\-change\-interface\fP \fIinterface\fP
-Change the alfred server to use the new \fBinterface\fP
+Change the alfred server to use the new \fBinterface\fP(s)
 .
 .SH SERVER OPTIONS
 .TP
 \fB\-i\fP, \fB\-\-interface\fP \fiface\fP
-Specify the interface to listen on
+Specify the interface (or comma separated list of interfaes) to listen on
 .TP
 \fB\-b\fP \fIbatmanif\fP
 Specify the batman-adv interface configured on the system (default: bat0).
