alfred: Add option to the client to print extra data information
The version of a dataset can be queried using the parameter --verbose/-d. It is
printed as third component of each dataset line when starting the unix client
in request mode.

Signed-off-by: Sven Eckelmann <sven@narfation.org>
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -67,6 +67,9 @@ alfred will forget about it (after 10 minutes).
 \fB\-r\fP, \fB\-\-request\fP \fIdata\-type\fP
 Collect data from the network and prints it on the network
 .TP
+\fB\-d\fP, \fB\-\-verbose\fP
+Show extra information in the data output
+.TP
 \fB\-V\fP, \fB\-\-req\-version\fP \fIversion\fP
 Specify the data version set for \fB\-s\fP
 
