--- a/man/alfred.8
+++ b/man/alfred.8
@@ -90,7 +90,7 @@ Change the alfred server to use the new \fBinterface\fP(s)
 .SH SERVER OPTIONS
 .TP
 \fB\-i\fP, \fB\-\-interface\fP \fiface\fP
-Specify the interface (or comma separated list of interfaes) to listen on
+Specify the interface (or comma separated list of interfaces) to listen on
 .TP
 \fB\-b\fP \fIbatmanif\fP
 Specify the batman-adv interface configured on the system (default: bat0).
@@ -102,7 +102,7 @@ batman-adv interface not called bat0, or if you don't use batman-adv at all
 able to find the best next master server based on metrics.
 .TP
 \fB\-m\fP, \fB\-\-master\fP
-Start up the daemon in master mode, which accepts data from slaves and synces
+Start up the daemon in master mode, which accepts data from slaves and syncs
 it with other masters.
 
 alfred servers may either run as master or slave in the network. Masters will
