alfred: Fix typo Retreive -> Retrieve
Signed-off-by: Sven Eckelmann <sven@narfation.org>
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -130,7 +130,7 @@ Send data to the alfred server and store it under id 65:
 .br
 \fB     cat /etc/hostname | alfred -s 65\fP
 
-Retreive all data stored as id 65 from all connected alfred servers:
+Retrieve all data stored as id 65 from all connected alfred servers:
 .br
 \fB     alfred -r 65\fP
 .nf
