--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+alfred 2016.1:
+
+ * add support for master servers to receive push_data packets with foreign
+   source addresses
+ * various code cleanups
+ * bugs squashed:
+   - ignore invalid EUI64 addresses
+
+ -- Thu, 21 Apr 2016 14:09:12 +0200
+
 alfred 2016.0:
 
  * various code and documentation cleanups
