alfred: Externalized synchronization interval
ALFRED_INTERVAL is now externalized via the -p option (synchronization
period).  If specified as option, user supplied interval is used,
otherwise the default interval of ALFRED_INTERVAL is used.

Signed-off-by: Jonathan Haws <jhaws@sdl.usu.edu>
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -118,6 +118,11 @@ overhead).
 \fB\-c\fP, \fB\-\-update-command\fP \fIcommand\fP
 Specify command to execute on data change. It will be called with data-type list
 as arguments.
+.TP
+\fB\-p\fP, \fB\-\-sync-period\fP \fIperiod\fP
+Specify alfred synchronization period, in seconds. If not specified, the default
+ALFRED_INTERVAL setting of 10 seconds will be used. Fractional seconds are
+supported.
 .
 .SH EXAMPLES
 Start an alfred server listening on bridge br0 (assuming that this bridge
