--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+alfred 2017.0:
+
+ * support IPv4 multicast distribution
+ * coding style cleanups
+
+ -- Tue, 28 Feb 2017 17:22:49 +0100
+
 alfred 2016.5:
 
  * support interface validity checks on systems without debugfs
