alfred: Update CHANGELOG for upcoming release
Signed-off-by: Simon Wunderlich <sw@simonwunderlich.de>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+alfred 2017.1:
+
+ * (no changes)
+
+ -- Tue, 23 May 2017 11:40:21 +0200
+
 alfred 2017.0:
 
  * support IPv4 multicast distribution
