--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+alfred 2017.2:
+
+ * reduce cpu load when rating multiple master servers
+ * coding style cleanups and refactoring
+
+ -- Fri, 28 Jul 2017 13:45:50 +0200
+
 alfred 2017.1:
 
  * (no changes)
