--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+alfred 2017.3:
+
+ * reduction of memory usage when using --update-command
+
+ -- Thu, 28 Sep 2017 13:43:18 +0200
+
 alfred 2017.2:
 
  * reduce cpu load when rating multiple master servers
