alfred: man: Fix format of interface parameter
Signed-off-by: Sven Eckelmann <sven@narfation.org>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -94,7 +94,7 @@ Change the alfred server to use the new \fBinterface\fP(s)
 .
 .SH SERVER OPTIONS
 .TP
-\fB\-i\fP, \fB\-\-interface\fP \fiface\fP
+\fB\-i\fP, \fB\-\-interface\fP \fIiface\fP
 Specify the interface (or comma separated list of interfaces) to listen on
 .TP
 \fB\-b\fP \fIbatmanif\fP
