alfred: improve grammar in documentation of '-r' argument
Signed-off-by: Marek Lindner <mareklindner@neomailbox.ch>
Signed-off-by: Sven Eckelmann <sven@narfation.org>

--- a/man/alfred.8
+++ b/man/alfred.8
@@ -67,7 +67,7 @@ must be periodically written again to alfred, otherwise it will timeout and
 alfred will forget about it (after 10 minutes).
 .TP
 \fB\-r\fP, \fB\-\-request\fP \fIdata\-type\fP
-Collect data from the network and prints it on stdout
+Collect data from the network and print on stdout
 .TP
 \fB\-d\fP, \fB\-\-verbose\fP
 Show extra information in the data output
